--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,8 @@
 version: "3.8"
 services:
   web:
-    build: .
+    build:
+      context: ./docker
     ports:
       - "8080:80"
     environment:
